--- a/index.html
+++ b/index.html
@@ -8,5 +8,56 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="side-image-panel">
+      <div class="logo">
+        <img src="img/odin-lined.png" alt="the odin project logo" />
+        <p class="title">ODIN</p>
+      </div>
+      <p>Photo by <span>Halie West</span> on <span>Unsplash</span></p>
+    </div>
+    <div class="input-panel">
+      <p class="hook">
+        This is not a real online service! You knwo you need something like this
+        in your life to help you realize your deepest dreams.Sign up now top get
+        started
+      </p>
+      <p class="hook">You <i>know</i> you want to</p>
+      <div class="sign-up">
+        <p>Let's do this!</p>
+        <form action="" id="form-section" method="post">
+            <div>
+              <label for="firstName">FIRST NAME</label>
+              <input type="text" id="firstName" name="user_firstName" />
+            </div>
+            <div>
+              <label for="lastName">LAST NAME</label>
+              <input type="text" id="lastName" name="user_lastName" />
+            </div>
+            <div>
+              <label for="email">EMAIL</label>
+              <input type="email" id="email" name="user_email" />
+            </div>
+            <div>
+              <label for="phoneNumber">PHONE NUMBER</label>
+              <input type="tel" id="phoneNumber" name="user_phoneNumber" />
+            </div>
+            <div>
+              <label for="password">PASSWORD</label>
+              <input type="password" id="password" name="user_password" />
+            </div>
+            <div>
+              <label for="confirmPassword">CONFIRM PASSWORD</label>
+              <input
+                type="password"
+                id="confirmPassword"
+                name="user_confirmPassword"
+              />
+            </div>
+          </div>
+          <button type="submit">Create Account</button>
+        </form>
+      <p>Already have an account?<span>Log in</span></p>
+    </div>
+  </body>
 </html>
