--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign-up form</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
@@ -14,7 +17,10 @@
         <img src="img/odin-lined.png" alt="the odin project logo" />
         <p class="title">ODIN</p>
       </div>
-      <p>Photo by <span>Halie West</span> on <span>Unsplash</span></p>
+      <p class="credit">Photo by 
+          <a href="https://unsplash.com/photos/25xggax4bSA" target="_blank">
+        Halie West</a> on  <a href="https://unsplash.com/photos/25xggax4bSA" target="_blank">
+            Unsplash</a></p>
     </div>
     <div class="input-panel">
       <p class="hook">
