--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <!-- LEFT SECTION -->
     <div class="side-image-panel">
       <div class="logo">
         <img src="img/odin-lined.png" alt="the odin project logo" />
@@ -22,48 +23,60 @@
         Halie West</a> on  <a href="https://unsplash.com/photos/25xggax4bSA" target="_blank">
             Unsplash</a></p>
     </div>
+
+    <!-- RIGHT SECTION -->
     <div class="input-panel">
-      <p class="hook">
-        This is not a real online service! You knwo you need something like this
-        in your life to help you realize your deepest dreams.Sign up now top get
-        started
-      </p>
-      <p class="hook">You <i>know</i> you want to</p>
+        <div class="hook">
+            <p>
+              This is not a real online service! You knwo you need something like this
+              in your life to help you realize your deepest dreams. Sign up now top get
+              started
+            </p>
+            <p>You <i>know</i> you want to</p>
+        </div>
       <div class="sign-up">
         <p>Let's do this!</p>
         <form action="" id="form-section" method="post">
-            <div>
-              <label for="firstName">FIRST NAME</label>
-              <input type="text" id="firstName" name="user_firstName" />
-            </div>
-            <div>
-              <label for="lastName">LAST NAME</label>
-              <input type="text" id="lastName" name="user_lastName" />
-            </div>
-            <div>
-              <label for="email">EMAIL</label>
-              <input type="email" id="email" name="user_email" />
-            </div>
-            <div>
-              <label for="phoneNumber">PHONE NUMBER</label>
-              <input type="tel" id="phoneNumber" name="user_phoneNumber" />
-            </div>
-            <div>
-              <label for="password">PASSWORD</label>
-              <input type="password" id="password" name="user_password" />
-            </div>
-            <div>
-              <label for="confirmPassword">CONFIRM PASSWORD</label>
-              <input
-                type="password"
-                id="confirmPassword"
-                name="user_confirmPassword"
-              />
+            <div class="inputs">
+                <div>
+                  <label for="firstName">FIRST NAME</label>
+                  <input type="text" id="firstName" name="user_firstName" />
+                </div>
+                <div>
+                  <label for="lastName">LAST NAME</label>
+                  <input type="text" id="lastName" name="user_lastName" />
+                </div>
+                <div>
+                  <label for="email">EMAIL</label>
+                  <input type="email" id="email" name="user_email" />
+                </div>
+                <div>
+                  <label for="phoneNumber">PHONE NUMBER</label>
+                  <input type="tel" id="phoneNumber" name="user_phoneNumber" />
+                </div>
+                <div>
+                  <label for="password">PASSWORD</label>
+                  <input type="password" id="password" name="user_password" required/>
+                </div>
+                <div>
+                  <label for="confirmPassword">CONFIRM PASSWORD</label>
+                  <input
+                    type="password"
+                    id="confirmPassword"
+                    name="user_confirmPassword"
+                    required
+                  />
+                </div>
             </div>
           </div>
-          <button type="submit">Create Account</button>
+          <div id="create-account">
+              <button type="submit">Create Account</button>
+              
+              <p>Already have an account?
+                  <a href="http://" target="_blank" rel="noopener noreferrer"> Log in</a>
+                </p>
+          </div>
         </form>
-      <p>Already have an account?<span>Log in</span></p>
     </div>
   </body>
 </html>
