--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div>
                   <label for="email">EMAIL</label>
-                  <input type="email" id="email" name="user_email" />
+                  <input type="email" id="email" name="user_email" required/>
                 </div>
                 <div>
                   <label for="phoneNumber">PHONE NUMBER</label>
@@ -56,7 +56,8 @@
                 </div>
                 <div>
                   <label for="password">PASSWORD</label>
-                  <input type="password" id="password" name="user_password" required/>
+                  <input type="password" id="password" class="error" name="user_password" required/>
+                  <span></span>               
                 </div>
                 <div>
                   <label for="confirmPassword">CONFIRM PASSWORD</label>
@@ -73,7 +74,7 @@
               <button type="submit">Create Account</button>
               
               <p>Already have an account?
-                  <a href="http://" target="_blank" rel="noopener noreferrer"> Log in</a>
+                  <a id="login" href="http://" target="_blank" rel="noopener noreferrer"> Log in</a>
                 </p>
           </div>
         </form>
