Password Validation Implemented

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       <div class="sign-up">
         <p>Let's do this!</p>
-        <form action="" id="form-section" method="post">
+        <form action="#" id="form-section" method="post">
             <div class="inputs">
                 <div>
                   <label for="firstName">FIRST NAME</label>
@@ -52,11 +52,11 @@
                 </div>
                 <div>
                   <label for="phoneNumber">PHONE NUMBER</label>
-                  <input type="tel" id="phoneNumber" name="user_phoneNumber" />
+                  <input type="tel" id="phoneNumber" name="user_phoneNumber" required/>
                 </div>
                 <div>
                   <label for="password">PASSWORD</label>
-                  <input type="password" id="password" class="error" name="user_password" required/>
+                  <input type="password" id="password" class="" name="user_password" required/>
                   <span></span>               
                 </div>
                 <div>
